fixed map datapg spacing

--- a/client/src/stylesheets/map and data/map.css
+++ b/client/src/stylesheets/map and data/map.css
@@ -1,16 +1,7 @@
 .map-transition {
     transition: width 0.5s ease-in-out; 
-  }
+}
   
-  .data-panel-hidden {
-    transition: width 0.5s ease-in-out;
-    width: 100vw; 
-  }
-  
-  .data-panel-visible {
-    transition: width 0.5s ease-in-out;
-    width: 60vw; 
-  }
-  path.leaflet-interactive:focus {
+path.leaflet-interactive:focus {
     outline: none;
 }
